force-app/main/default/objects/Booking__c/fields/Propierty__c.field-meta.xml
<CustomField>
    <fullName>Propierty__c</fullName>
    <label>Propierty</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>