force-app/main/default/objects/Booking__c/fields/Quantity_Night__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Night__c</fullName>
    <formula>DAY(End_Date__c) -DAY(Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Night</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>