force-app/main/default/objects/Booking__c/fields/Travelers__c.field-meta.xml
<CustomField>
    <fullName>Travelers__c</fullName>
    <label>Travelers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>