force-app/main/default/objects/Booking__c/validationRules/Select_End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_End_Date</fullName>
    <active>false</active>
    <errorConditionFormula>TRUE</errorConditionFormula>
    <errorMessage>End Date is not available date</errorMessage>
</ValidationRule>