force-app/main/default/objects/Booking__c/validationRules/Select_Start_Date_Available.validationRule-meta.xml
<ValidationRule>
    <fullName>Select_Start_Date_Available</fullName>
    <active>false</active>
    <errorConditionFormula>TRUE</errorConditionFormula>
    <errorMessage>Start date is not available date</errorMessage>
</ValidationRule>